# detect

./: .gitignore  1.Training.dvc  2.Validation.dvc  change.py  data.yaml  main.py  main.py.bak  pyproject.toml  temp.py  verify.py
process/: __init__.py  config.py  converter.py  train.py  utils.py  yolo_utils.py
